--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,9 +22,21 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
+      - name: Create Custom Docker Network
+        run: docker network create dockerized_test_laravel_app_network || true
       - name: Pull image from docker hub
         run: docker pull kodevendor/dockerized-test-laravel-app:latest
       - name: Delete old container
         run: docker rm -f dockerized_test_laravel_app_container
       - name: Run Docker Container
-        run: docker run -d -p 9000:80 --name dockerized_test_laravel_app_container kodevendor/dockerized-test-laravel-app
+        run: docker run -d -p 9000:80 --name dockerized_test_laravel_app_container --network dockerized_test_laravel_app_network kodevendor/dockerized-test-laravel-app
+      - name: Pull MySQL Image
+        run: docker pull mysql:latest
+      - name: Delete Old MySQL Container
+        run: docker rm -f mysql
+      - name: Run MySQL Container
+        run: docker run -d --name mysql --network dockerized_test_laravel_app_network -e MYSQL_ROOT_PASSWORD=root_password -e MYSQL_DATABASE=laravel -e MYSQL_USER=root -e MYSQL_PASSWORD=database_password -p 3306:3306 mysql:latest
+      - name: Pull PhpMyAdmin Image
+        run: docker pull phpmyadmin:latest
+      - name: Run PhpMyAdmin container
+        run: docker run -d --name phpmyadmin --network dockerized_test_laravel_app_network -e PMA_HOST=mysql -e PMA_PORT=3306 -p 8080:80 phpmyadmin:latest
