Updated cicd.yml file.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Delete Old MySQL Container
         run: docker rm -f mysql
       - name: Run MySQL Container
-        run: docker run -d --name mysql --network dockerized_test_laravel_app_network -e MYSQL_ROOT_PASSWORD=root_password -e MYSQL_DATABASE=laravel -e MYSQL_USER=root -e MYSQL_PASSWORD=database_password -p 3306:3306 mysql:latest
+        run: docker run -d --name mysql --network dockerized_test_laravel_app_network -e MYSQL_ROOT_PASSWORD=root_password -e MYSQL_DATABASE=laravel -e MYSQL_USER=database_user -e MYSQL_PASSWORD=database_password -p 3306:3306 mysql:latest
       - name: Pull PhpMyAdmin Image
         run: docker pull phpmyadmin:latest
       - name: Run PhpMyAdmin container
