--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Deploy Dockerized Test Laravel App On AWS EC2 Instance
+name: Deploy Dockerized Test Laravel App On AWS EC2 Instance With Docker Hub
 
 on:
   push:
